--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,47 +1,53 @@
-# This file was created automatically with `myst init --gh-pages` 🪄 💚
-# Ensure your GitHub Pages settings for this repository are set to deploy with **GitHub Actions**.
+name: Deploy Jupyter Book
 
-name: MyST GitHub Pages Deploy
 on:
   push:
-    # Runs on pushes targeting the default branch
-    branches: [main]
+    branches:
+      - main
 env:
   # `BASE_URL` determines the website is served from, including CSS & JS assets
   # You may need to change this to `BASE_URL: ''`
   BASE_URL: /${{ github.event.repository.name }}
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-concurrency:
-  group: 'pages'
-  cancel-in-progress: false
 jobs:
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build:
     runs-on: ubuntu-latest
+    
+    permissions:
+      contents: write
+      pages: write
+      pull-requests: write
     steps:
-      - uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-      - uses: actions/setup-node@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v3
         with:
-          node-version: 18.x
-      - name: Install MyST Markdown
-        run: npm install -g mystmd
-      - name: Build HTML Assets
-        run: myst build --html
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+          submodules: 'true'
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          path: './_build/html'
+          python-version: "3.10"
+
+      - name: Install Dependencies
+        run: |
+          pip install -r requirements.txt
+
+      - name: Build Jupyter Book
+        run: |
+          # Clear potential other myst configurations in external_notebooks
+          find external_notebooks -type f \( -iname "myst.yaml" -o -iname "myst.yml" \) -exec rm -v {} +
+          jupyter book build --html
+
+      - name: Generate Notebook List
+        run: |
+          python .github/workflows/generate_notebook_list.py
+          cp notebooks.json _build/html/notebooks.json
+          cp index.html _build/html/index.html
+          touch _build/html/.nojekyll
+
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: _build/html/
+          branch: gh-pages
+          clean-exclude: pr-preview
+          force: false
