--- a/myst.yml
+++ b/myst.yml
@@ -2,6 +2,9 @@
 version: 1
 project:
   id: feb2375d-3838-4365-bbd7-f43d501cdcbe
+  title: "EOxHub Notebooks"
+  subject: "Notebook examples"
+  description: "Collection of examples for EOxHub Workspaces"
   # title:
   # description:
   # keywords: []
@@ -10,6 +13,11 @@ project:
   # To autogenerate a Table of Contents, run "jupyter book init --write-toc"
 site:
   template: book-theme
+  options:
+    folders: true
+    hide_toc: true
+    hide_footer_links: true
+    style: _static/custom.css
   # options:
   #   favicon: favicon.ico
   #   logo: site_logo.png
