--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,9 @@ jobs:
         with:
           python-version: "3.10"
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+
       - name: Install Dependencies
         run: |
           pip install -r requirements.txt
@@ -38,11 +41,7 @@ jobs:
           jupyter book build --html
 
       - name: Generate Notebook List
-        run: |
-          python .github/workflows/generate_notebook_list.py
-          cp notebooks.json _build/html/notebooks.json
-          cp index.html _build/html/index.html
-          touch _build/html/.nojekyll
+        run: npm run build
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
