--- a/myst.yml
+++ b/myst.yml
@@ -9,7 +9,12 @@ project:
   # description:
   # keywords: []
   # authors: []
-  github: https://github.com/eoxhub-workspaces/eoxhub-notebooks/
+  github: https://github.com/eoxhub-workspaces/eoxhub-notebooks
+  # This disables the "Launch" (Rocket) button entirely
+  launch: false
+  # You might also want to disable specific sub-features if launch: false doesn't catch them all
+  jupyterhub: false
+  colab: false
   # To autogenerate a Table of Contents, run "jupyter book init --write-toc"
 site:
   template: book-theme
